[gd_scene load_steps=9 format=3 uid="uid://bm5ymhyca7qb"]

[ext_resource type="PackedScene" uid="uid://clax6qj2xfw1m" path="res://cena/captador.tscn" id="1_2s4eg"]
[ext_resource type="Script" uid="uid://c231mg834lmuy" path="res://cena/jogo.gd" id="1_8xhey"]
[ext_resource type="PackedScene" uid="uid://8piwjevlsooe" path="res://cena/nota.tscn" id="2_8xhey"]
[ext_resource type="PackedScene" uid="uid://c7cviiupjyive" path="res://cena/acerto.tscn" id="4_mpjyy"]
[ext_resource type="FontFile" uid="uid://8xvvp364xyv8" path="res://fontes/SIXTY.TTF" id="5_4bcru"]
[ext_resource type="PackedScene" uid="uid://cp3hom1rsx2q7" path="res://cena/rock.tscn" id="6_3118s"]
[ext_resource type="AudioStream" uid="uid://coi335c1mf1c8" path="res://musica/A Lone Prayer - Persona 1 (PSP).mp3" id="7_3vra5"]

[sub_resource type="LabelSettings" id="LabelSettings_3118s"]
font = ExtResource("5_4bcru")
font_size = 75
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[node name="jogo" type="Node2D"]
script = ExtResource("1_8xhey")
cena_de_acerto = ExtResource("4_mpjyy")
cena_de_nota = ExtResource("2_8xhey")

[node name="c_verde" parent="." instance=ExtResource("1_2s4eg")]
position = Vector2(460, 600)

[node name="c_vermelho" parent="." instance=ExtResource("1_2s4eg")]
position = Vector2(550, 600)
cor = "vermelho"

[node name="c_amarelo" parent="." instance=ExtResource("1_2s4eg")]
position = Vector2(640, 600)
cor = "amarelo"

[node name="c_azul" parent="." instance=ExtResource("1_2s4eg")]
position = Vector2(730, 600)
cor = "azul"

[node name="c_laranja" parent="." instance=ExtResource("1_2s4eg")]
position = Vector2(820, 600)
cor = "laranja"

[node name="pontos" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "00000"
label_settings = SubResource("LabelSettings_3118s")

[node name="erro" type="AudioStreamPlayer" parent="."]

[node name="rock" parent="." instance=ExtResource("6_3118s")]
position = Vector2(950, 550)

[node name="timer" type="Timer" parent="."]

[node name="musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_3vra5")
autoplay = true

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
